--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Herrera Axel | Week 1 | WDD 130</title>
 </head>
+
 <body>
-    <h1>HI!</h1>
+    <h1>Herrera Axel</h1>
+    <p>I, Nephi, having been born of goodly parents, therefore I was taught somewhat in all the learning of my
+        father; and having seen many afflictions in the course of my days, nevertheless, having been <strong>highly</strong> favored of
+        the <em>Lord</em> in all my days; yea, having had a great knowledge of the goodness and the mysteries of God, therefore I
+        make a record of my proceedings in my days.</p>
+
+        <ul>
+            <li>Play Piano</li>
+            <li>Play Violin</li>
+            <li>Play Soccer</li>
+            <li>Learn about technology</li>
+            <li>Cooking</li>
+        </ul>
 </body>
+
 </html>
