--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- Here starts the Nav BAR  -->
         <nav class="header__nav">
             <div class="header__logo">
-                <img src="/Images/placeimg_50_50_nature.jpg" alt="Placeholder image">
+                <img src="./Images/placeimg_50_50_nature.jpg" alt="Placeholder image">
             </div>
             <div class="header__bar">
                 <ul>
@@ -27,7 +27,7 @@
         </nav> <!-- Here finishes the NAV BAR -->
 
         <div class="header__image">
-            <img src="/Images/placeimg_640_480_nature.jpg" alt="PlaceHolder header image">
+            <img src="./Images/placeimg_640_480_nature.jpg" alt="PlaceHolder header image">
         </div>
     </header>
 
@@ -42,14 +42,14 @@
                         reprehenderit! Nobis optio corrupti dolores. Asperiores.</p>
             </div>
             <div class="main_firstImage">
-                <img src="/Images/placeimg_320_240_nature.jpg" alt="PlacerHolder main first image">
+                <img src="./Images/placeimg_320_240_nature.jpg" alt="PlacerHolder main first image">
             </div>
         </section>
 
         <!-- Here starts the SECOND SECTION  -->
         <section class="main__section2">
             <div class="main__secondeImage">
-                <img src="/Images/placeimg_320_240_nature (1).jpg" alt="">
+                <img src="./Images/placeimg_320_240_nature (1).jpg" alt="">
             </div>
             <div class="main__secondTexts">
                 <h1>We run whitewater for the rush</h1>
@@ -75,9 +75,9 @@
             <p>@2022 Secure Rafting - Herrera Axel - WDD 130</p>
         </div>
         <div class="footer__socialMedia">
-            <img src="/Images/placeimg_20_20_nature.jpg" alt="">
-            <img src="/Images/placeimg_20_20_nature (1).jpg" alt="">
-            <img src="/Images/placeimg_20_20_nature (2).jpg" alt="">
+            <img src="./Images/placeimg_20_20_nature.jpg" alt="">
+            <img src="./Images/placeimg_20_20_nature (1).jpg" alt="">
+            <img src="./Images/placeimg_20_20_nature (2).jpg" alt="">
         </div>
     </footer>
 
