--- a/rafting/index.html
+++ b/rafting/index.html
@@ -17,7 +17,7 @@
             <!-- Here starts the Nav BAR  -->
             <nav class="header__nav">
                 <div class="header__logo">
-                    <img src="./images/Secure_Rafting_logo.png" alt="secure rafting logo">
+                    <img src="./images/secure_Rafting_logo.png" alt="secure rafting logo">
                 </div>
                 <div class="header__bar">
                     <ul>
@@ -47,7 +47,7 @@
                                 reprehenderit! Nobis optio corrupti dolores. Asperiores.</p>
                         </div>
                         <div class="main_section__image">
-                            <img src="./images/Calm_rafting.jpg" alt="Relax Rafting">
+                            <img src="./images/calm_rafting.jpg" alt="Relax Rafting">
                         </div>
                     
 
@@ -56,7 +56,7 @@
                 <!-- Here starts the SECOND SECTION  -->
                 <section class="main__section">
                         <div class="main_section__image">
-                            <img src="./images/Rush_Rafting.jpg" alt="Rush Rafting">
+                            <img src="./images/rush_Rafting.jpg" alt="Rush Rafting">
                         </div>
                         <div class="main__section_texts">
                             <h1>We run whitewater for the rush</h1>
