--- a/week6/posititioning.html
+++ b/week6/posititioning.html
@@ -79,7 +79,7 @@
           exercitationem rerum commodi facere. Quos alias quisquam hic. Eveniet
           ducimus, voluptatem iusto minus expedita aut cupiditate blanditiis
           quia molestiae quasi, qui, harum excepturi libero maxime sapiente!
-          Expedita veritatis similique porro, mollitia aperiam tempore.
+          Expedita veritatis similique porro.
         </div>
         <div class="blue5"></div>
       </div>
