--- a/rafting/index.html
+++ b/rafting/index.html
@@ -16,7 +16,7 @@
         <header class="header">
             <!-- L O G O -->
             <div class="header__logo">
-                <img src="./images/Secure_Rafting_logo.png" alt="secure rafting logo">
+                <img src="./images/secure_Rafting_logo.png" alt="secure rafting logo">
             </div>
             <!-- Here starts the Nav BAR  -->
             <nav class="header__nav">
@@ -57,7 +57,7 @@
                                 reprehenderit! Nobis optio corrupti dolores. Asperiores.</p>
                         </div>
                         <div class="main_section__image">
-                            <img src="./images/Calm_rafting.jpg" alt="Relax Rafting">
+                            <img src="./images/calm_rafting.jpg" alt="Relax Rafting">
                         </div>
                     
 
@@ -66,7 +66,7 @@
                 <!-- Here starts the SECOND SECTION  -->
                 <section class="main__section">
                         <div class="main_section__image">
-                            <img src="./images/Rush_Rafting.jpg" alt="Rush Rafting">
+                            <img src="./images/rush_Rafting.jpg" alt="Rush Rafting">
                         </div>
                         <div class="main__section_texts">
                             <h1>We run whitewater for the rush</h1>
@@ -93,9 +93,9 @@
                 <p>@2022 Secure Rafting - Herrera Axel - WDD 130</p>
             </div>
             <div class="footer__socialMedia">
-                <img src="./images/Facebook_Icon.svg" alt="Facebook logo">
-                <img src="./images/Instagram_Icon.svg" alt="Instagram Logo">
-                <img src="./images/Linkedin_Icon.svg" alt="Linkedin Logo">
+                <img src="./images/facebook_Icon.svg" alt="Facebook logo">
+                <img src="./images/instagram_Icon.svg" alt="Instagram Logo">
+                <img src="./images/linkedin_Icon.svg" alt="Linkedin Logo">
             </div>
         </footer>
     </div>    
