--- a/rafting/index.html
+++ b/rafting/index.html
@@ -16,7 +16,7 @@
         <header class="header">
             <!-- L O G O -->
             <div class="header__logo">
-                <img src="./images/secure_Rafting_logo.png" alt="secure rafting logo">
+                <img src="./images/secure_Rafting_logo.avif" alt="secure rafting logo">
             </div>
             <!-- Here starts the Nav BAR  -->
             <nav class="header__nav">
@@ -35,7 +35,7 @@
 
         <div class="banner">
             <div class="banner__image">
-                <img src="./images/wallpaper.jpg" alt="River">
+                <img src="./images/wallpaper.avif" alt="River">
             </div>
 
             <div class="button-banner">
@@ -57,7 +57,7 @@
                                 reprehenderit! Nobis optio corrupti dolores. Asperiores.</p>
                         </div>
                         <div class="main_section__image">
-                            <img src="./images/calm_rafting.jpg" alt="Relax Rafting">
+                            <img src="./images/calm_rafting.avif" alt="Relax Rafting">
                         </div>
                     
 
@@ -66,7 +66,7 @@
                 <!-- Here starts the SECOND SECTION  -->
                 <section class="main__section">
                         <div class="main_section__image">
-                            <img src="./images/rush_Rafting.jpg" alt="Rush Rafting">
+                            <img src="./images/rush_Rafting.avif" alt="Rush Rafting">
                         </div>
                         <div class="main__section_texts">
                             <h1>We run whitewater for the rush</h1>
