--- a/rafting/index.html
+++ b/rafting/index.html
@@ -16,7 +16,7 @@
         <header class="header">
             <!-- L O G O -->
             <div class="header__logo">
-                <img src="./images/secure_Rafting_logo.avif" alt="secure rafting logo">
+                <img src="./images/secure_Rafting_logo.svg" alt="secure rafting logo">
             </div>
             <!-- Here starts the Nav BAR  -->
             <nav class="header__nav">
