--- a/rafting/index.html
+++ b/rafting/index.html
@@ -19,7 +19,7 @@
             <!-- Here starts the Nav BAR  -->
             <nav class="header__nav">
                 <div class="header__logo">
-                    <img src="./images/Secure_Rafting_logo.png" alt="secure rafting logo">
+                    <img src="./images/secure_Rafting_logo.png" alt="secure rafting logo">
                 </div>
                 <div class="header__bar">
                     <ul>
@@ -53,7 +53,7 @@
                                 reprehenderit! Nobis optio corrupti dolores. Asperiores.</p>
                         </div>
                         <div class="main_section__image">
-                            <img src="./images/Calm_rafting.jpg" alt="Relax Rafting">
+                            <img src="./images/calm_rafting.jpg" alt="Relax Rafting">
                         </div>
                     
 
@@ -62,7 +62,7 @@
                 <!-- Here starts the SECOND SECTION  -->
                 <section class="main__section">
                         <div class="main_section__image">
-                            <img src="./images/Rush_Rafting.jpg" alt="Rush Rafting">
+                            <img src="./images/rush_Rafting.jpg" alt="Rush Rafting">
                         </div>
                         <div class="main__section_texts">
                             <h1>We run whitewater for the rush</h1>
@@ -89,9 +89,9 @@
                 <p>@2022 Secure Rafting - Herrera Axel - WDD 130</p>
             </div>
             <div class="footer__socialMedia">
-                <img src="./images/Facebook_Icon.svg" alt="Facebook logo">
-                <img src="./images/Instagram_Icon.svg" alt="Instagram Logo">
-                <img src="./images/Linkedin_Icon.svg" alt="Linkedin Logo">
+                <img src="./images/facebook_Icon.svg" alt="Facebook logo">
+                <img src="./images/instagram_Icon.svg" alt="Instagram Logo">
+                <img src="./images/linkedin_Icon.svg" alt="Linkedin Logo">
             </div>
         </footer>
         
