--- a/rafting/testimonials.html
+++ b/rafting/testimonials.html
@@ -20,7 +20,7 @@
             <!-- Here starts the Nav BAR  -->
             <nav class="header__nav">
                 <div class="header__logo">
-                    <img src="./images/Secure_Rafting_logo.png" alt="secure rafting logo">
+                    <img src="./images/secure_Rafting_logo.png" alt="secure rafting logo">
                 </div>
                 <div class="header__bar">
                     <ul>
@@ -138,9 +138,9 @@
                 <p>@2022 Secure Rafting - Herrera Axel - WDD 130</p>
             </div>
             <div class="footer__socialMedia">
-                <img src="./images/Facebook_Icon.svg" alt="Facebook logo">
-                <img src="./images/Instagram_Icon.svg" alt="Instagram Logo">
-                <img src="./images/Linkedin_Icon.svg" alt="Linkedin Logo">
+                <img src="./images/facebook_Icon.svg" alt="Facebook logo">
+                <img src="./images/instagram_Icon.svg" alt="Instagram Logo">
+                <img src="./images/linkedin_Icon.svg" alt="Linkedin Logo">
             </div>
         </footer>
 </body>
