--- a/rafting/index.html
+++ b/rafting/index.html
@@ -31,7 +31,7 @@
             </nav> <!-- Here finishes the NAV BAR -->
 
             <div class="header__image">
-                <img src="./images/wallpaper.jpg" alt="River">
+                <img src="./images/wallpaper.avif" alt="River">
             </div>
 
             <div class="header__button">
@@ -53,7 +53,7 @@
                                 reprehenderit! Nobis optio corrupti dolores. Asperiores.</p>
                         </div>
                         <div class="main_section__image">
-                            <img src="./images/calm_rafting.jpg" alt="Relax Rafting">
+                            <img src="./images/calm_rafting2.avif" alt="Relax Rafting">
                         </div>
                     
 
@@ -62,7 +62,7 @@
                 <!-- Here starts the SECOND SECTION  -->
                 <section class="main__section">
                         <div class="main_section__image">
-                            <img src="./images/rush_Rafting.jpg" alt="Rush Rafting">
+                            <img src="./images/rush_Rafting.avif" alt="Rush Rafting">
                         </div>
                         <div class="main__section_texts">
                             <h1>We run whitewater for the rush</h1>
