--- a/rafting/testimonials.html
+++ b/rafting/testimonials.html
@@ -32,7 +32,7 @@
             </nav> <!-- Here finishes the NAV BAR -->
 
             <div class="header__image">
-                <img src="./images/wallpaper.jpg" alt="River">
+                <img src="./images/wallpaper.avif" alt="River">
             </div>
 
             <div class="header__button">
