--- a/final/index.html
+++ b/final/index.html
@@ -54,7 +54,7 @@
             <!-- C A R D 1 -->
             <div class="consequences__card">
                 <div class="card__icon">
-                    <img src="./images/check.svg" alt="">
+                    <img src="./images/check.svg" alt="Healthy">
                 </div>
                 <div class="card__text">
                     <h6>Control</h6>
@@ -66,7 +66,7 @@
             <!-- C A R D 2 -->
             <div class="consequences__card">
                 <div class="card__icon">
-                    <img src="./images/check.svg" alt="">
+                    <img src="./images/check.svg" alt="Healthy">
                 </div>
                 <div class="card__text">
                     <h6>Avoid diseases</h6>
@@ -80,7 +80,7 @@
             <!-- C A R D 3 -->
             <div class="consequences__card">
                 <div class="card__icon">
-                    <img src="./images/check.svg" alt="">
+                    <img src="./images/check.svg" alt="Healthy">
                 </div>
                 <div class="card__text">
                     <h6>Emotional health</h6>
@@ -96,7 +96,7 @@
             <!-- C A R D 4 -->
             <div class="consequences__card2">
                 <div class="card__icon2">
-                    <img src="./images/wrong.svg" alt="">
+                    <img src="./images/wrong.svg" alt="Unhealthy">
                 </div>
                 <div class="card__text card__text2">
                     <h6>Low Weight</h6>
@@ -112,7 +112,7 @@
             <div class=" consequences__card2">
 
                 <div class="card__icon2">
-                    <img src="./images/wrong.svg" alt="">
+                    <img src="./images/wrong.svg" alt="Unhealthy">
                 </div>
                 <div class="card__text card__text2">
                     <h6>Overweigth</h6>
@@ -186,7 +186,7 @@
             </div>
             <div class="ideas__overweight">
                 <div class="img__idea">
-                    <img src="./images/sobrepeso.jpg" alt="" srcset="">
+                    <img src="./images/sobrepeso.jpg" alt="Overweight" srcset="">
                 </div>
                 <div class="text__idea">
                     <p>Overweight and obesity, as well as their related noncommunicable diseases, are largely
@@ -227,7 +227,7 @@
                     </div>
                 </div>
                 <div class="img__idea">
-                    <img src="./images/underweight.jpg" alt="">
+                    <img src="./images/underweight.jpg" alt="UnderWeight">
                 </div>
             </div>
         </div>
@@ -236,9 +236,9 @@
     <!-- F O O T E R -->
     <footer>
         <div class="footer__social">
-            <img src="./images/facebook.png" alt="">
-            <img src="./images/instagram.png" alt="">
-            <img src="./images/gorjeo.png" alt="">
+            <img src="./images/facebook.png" alt="Facebook">
+            <img src="./images/instagram.png" alt="Instagram">
+            <img src="./images/gorjeo.png" alt="Twitter">
         </div>
         <div class="footer__name">
             <p>Made by Herrera Axel - WDD 130</p>
