--- a/final/about.html
+++ b/final/about.html
@@ -20,15 +20,15 @@
 
         <nav class="header__navbar">
             <ul>
-                <li><img src="./images/home-svgrepo-com.svg" alt=""><a href="./index.html">Home</a></li>
-                <li><img src="./images/about-us-svgrepo-com.svg" alt=""><a href="./about.html">About</a></li>
-                <li><img src="./images/contact-svgrepo-com (1).svg" alt=""><a href="./contact.html">Contact</a></li>
+                <li><img src="./images/home-svgrepo-com.svg" alt="Home"><a href="./index.html">Home</a></li>
+                <li><img src="./images/about-us-svgrepo-com.svg" alt="About"><a href="./about.html">About</a></li>
+                <li><img src="./images/contact-svgrepo-com (1).svg" alt="Contact"><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <div class="team__img container">
-        <img src="./images/team.svg" alt="">
+        <img src="./images/team.svg" alt="Team">
     </div>
 
     <section class="text container">
@@ -38,35 +38,35 @@
 
         <div class="team__pleople">
             <div class="person">
-                <img src="./images/male.svg" alt="">
+                <img src="./images/male.svg" alt="Teammate">
                 <p>Position</p>
             </div>
             <div class="person">
-                <img src="./images/female.svg" alt="">
+                <img src="./images/female.svg" alt="Teammate">
                 <p>Position</p>
             </div>
             <div class="person">
-                <img src="./images/male.svg" alt="">
+                <img src="./images/male.svg" alt="Teammate">
                 <p>Position</p>
             </div>
             <div class="person">
-                <img src="./images/female.svg" alt="">
+                <img src="./images/female.svg" alt="Teammate">
                 <p>Position</p>
             </div>
             <div class="person">
-                <img src="./images/male.svg" alt="">
+                <img src="./images/male.svg" alt="Teammate">
                 <p>Position</p>
             </div>
             <div class="person">
-                <img src="./images/female.svg" alt="">
+                <img src="./images/female.svg" alt="Teammate">
                 <p>Position</p>
             </div>
             <div class="person">
-                <img src="./images/male.svg" alt="">
+                <img src="./images/male.svg" alt="Teammate">
                 <p>Position</p>
             </div>
             <div class="person">
-                <img src="./images/female.svg" alt="">
+                <img src="./images/female.svg" alt="Teammate">
                 <p>Position</p>
             </div>
         </div>
@@ -74,9 +74,9 @@
 
     <footer>
         <div class="footer__social">
-            <img src="./images/facebook.png" alt="">
-            <img src="./images/instagram.png" alt="">
-            <img src="./images/gorjeo.png" alt="">
+            <img src="./images/facebook.png" alt="Facebook">
+            <img src="./images/instagram.png" alt="Instagram">
+            <img src="./images/gorjeo.png" alt="Twitter">
         </div>
         <div class="footer__name">
             <p>Made by Herrera Axel - WDD 100</p>
