--- a/final/index.html
+++ b/final/index.html
@@ -147,11 +147,11 @@
                         </div>
                         <div class="control__input">
                             <div class="control__gender">
-                                <label id="gender1" for="gender1">Male</label>
-                                <input type="radio" id="gender1" name="user_gender1">
+                                <label id="gender1" for="gender_male">Male</label>
+                                <input type="radio" id="gender_male" name="user_gender1">
 
-                                <label id="gender2" for="gender2">Female</label>
-                                <input type="radio" id="gender2" name="user_gender2">
+                                <label id="gender2" for="gender_female">Female</label>
+                                <input type="radio" id="gender_female" name="user_gender2">
                             </div>
 
                         </div>
