--- a/final/index.html
+++ b/final/index.html
@@ -146,11 +146,11 @@
                         </div>
                         <div class="control__input">
                             <div class="control__gender">
-                                <label id="gender1" for="gender_male">Male</label>
-                                <input type="radio" id="gender_male" name="user_gender1">
+                                <label id="male__label" for="male">Male</label>
+                                <input type="radio" id="male" name="user_gender1">
 
-                                <label id="gender2" for="gender_female">Female</label>
-                                <input type="radio" id="gender_female" name="user_gender2">
+                                <label id="female__label" for="female">Female</label>
+                                <input type="radio" id="female" name="user_gender2">
                             </div>
 
                         </div>
