--- a/final/index.html
+++ b/final/index.html
@@ -23,7 +23,7 @@
             <ul>
                 <li><img src="./images/home-svgrepo-com.svg" alt=""><a href="./index.html">Home</a></li>
                 <li><img src="./images/about-us-svgrepo-com.svg" alt=""><a href="./about.html">About</a></li>
-                <li><img src="./images/contact-svgrepo-com (1).svg" alt=""><a href="./contact.html">Contact</a></li>
+                <li><img src="./images/contact.svg" alt=""><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
