--- a/final/index.html
+++ b/final/index.html
@@ -123,6 +123,7 @@
                     </ul>
                 </div><!-- C A R D 5 -->
             </div>
+        </div>
     </section>
 
     <!--- WEIGHT STATUS --->
