--- a/final/index.html
+++ b/final/index.html
@@ -126,7 +126,7 @@
         </div>
     </section>
 
-    <!--- WEIGHT STATUS --->
+    <!-- WEIGHT STATUS -->
     <div class="text_section2">
         <h1 class="container__text">Are you at a helthy weight? </h1>
     </div>
