--- a/final/index.html
+++ b/final/index.html
@@ -140,7 +140,7 @@
                     <div class="form__subtittle">
                         <h3>Let's know you BMI</h3>
                     </div>
-                    <form action="">
+                    <form>
                         <div class="control__input">
                             <label for="age">Age:</label>
                             <input type="text" id="age" name="user_age">
