--- a/final/index.html
+++ b/final/index.html
@@ -186,7 +186,7 @@
             </div>
             <div class="ideas__overweight">
                 <div class="img__idea">
-                    <img src="./images/sobrepeso.jpg" alt="Overweight" srcset="">
+                    <img src="./images/sobrepeso.jpg" alt="Overweight">
                 </div>
                 <div class="text__idea">
                     <p>Overweight and obesity, as well as their related noncommunicable diseases, are largely
