--- a/final/about.html
+++ b/final/about.html
@@ -22,7 +22,7 @@
             <ul>
                 <li><img src="./images/home-svgrepo-com.svg" alt="Home"><a href="./index.html">Home</a></li>
                 <li><img src="./images/about-us-svgrepo-com.svg" alt="About"><a href="./about.html">About</a></li>
-                <li><img src="./images/contact-svgrepo-com (1).svg" alt="Contact"><a href="./contact.html">Contact</a></li>
+                <li><img src="./images/contact.svg" alt="Contact"><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
